--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,7 +4,7 @@ footer{
     width: 100%;
     border-top: 1px solid #CCCCCC;
     text-align: center;
-    position:absolute;
+    /* position:fixed; */
     bottom:0;
     line-height:50px;
 }
